--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- <link rel="icon" href="./favicon.ico"> -->
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <style>
+    <style scoped>
     html,body,#app{
       margin: 0;
       padding: 0;
